--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".MainActivity"
     android:background="@color/azul_pista">
 
@@ -25,61 +26,230 @@
             <GridLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_gravity="center"
                 android:layout_marginStart="5dp"
                 android:layout_marginTop="20dp"
                 android:layout_marginEnd="5dp"
                 android:layout_marginBottom="5dp"
                 android:columnCount="3"
-                android:rowCount="2">
+                android:rowCount="2"
 
-                <ImageView
-                    android:id="@+id/player4"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:layout_gravity="center_vertical"
-                    android:layout_margin="10dp"
-                    android:src="@drawable/players_image" />
+                >
 
-                <ImageView
-                    android:id="@+id/player3"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:layout_gravity="center_vertical"
-                    android:layout_margin="10dp"
-                    android:src="@drawable/players_image" />
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/card_player4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    app:cardBackgroundColor="@color/transparent"
+                    app:cardElevation="0dp"
+                    android:layout_rowWeight="1"
+                    android:layout_columnWeight="1"
+                    >
 
-                <ImageView
-                    android:id="@+id/player2"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:layout_gravity="center_vertical"
-                    android:layout_margin="10dp"
-                    android:src="@drawable/players_image" />
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:layout_gravity="center">
 
-                <ImageView
-                    android:id="@+id/player5"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:layout_gravity="center_vertical"
-                    android:layout_margin="10dp"
-                    android:src="@drawable/players_image" />
+                        <ImageView
+                            android:id="@+id/imagen_player4"
+                            android:layout_width="75dp"
+                            android:layout_height="75dp"
+                            android:scaleType="fitCenter"
+                            android:src="@drawable/players_image" />
 
-                <ImageView
-                    android:id="@+id/player6"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:layout_gravity="center_vertical"
-                    android:layout_margin="10dp"
-                    android:src="@drawable/players_image" />
+                        <TextView
+                            android:id="@+id/nombre_player4"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_marginTop="5dp"
+                            android:text="Jugador 4"
+                            android:textSize="16sp"
+                            android:textStyle="bold" />
+                    </LinearLayout>
+                </androidx.cardview.widget.CardView>
 
-                <ImageView
-                    android:id="@+id/player1"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:layout_gravity="center_vertical"
-                    android:layout_margin="10dp"
-                    android:src="@drawable/players_image" />
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/card_player3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    app:cardBackgroundColor="@color/transparent"
+                    app:cardElevation="0dp"
+
+                    android:layout_rowWeight="1"
+                    android:layout_columnWeight="1">
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:layout_gravity="center">
+
+                        <ImageView
+                            android:id="@+id/imagen_player3"
+                            android:layout_width="75dp"
+                            android:layout_height="75dp"
+                            android:scaleType="fitCenter"
+                            android:src="@drawable/players_image" />
+
+                        <TextView
+                            android:id="@+id/nombre_player3"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_marginTop="5dp"
+                            android:text="Jugador 3"
+                            android:textSize="16sp"
+                            android:textStyle="bold" />
+                    </LinearLayout>
+                </androidx.cardview.widget.CardView>
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/card_player2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    app:cardBackgroundColor="@color/transparent"
+                    app:cardElevation="0dp"
+
+                    android:layout_rowWeight="1"
+                    android:layout_columnWeight="1">
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:layout_gravity="center">
+
+                        <ImageView
+                            android:id="@+id/imagen_player2"
+                            android:layout_width="75dp"
+                            android:layout_height="75dp"
+                            android:scaleType="fitCenter"
+                            android:src="@drawable/players_image" />
+
+                        <TextView
+                            android:id="@+id/nombre_player2"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_marginTop="5dp"
+                            android:text="Jugador 2"
+                            android:textSize="16sp"
+                            android:textStyle="bold" />
+                    </LinearLayout>
+                </androidx.cardview.widget.CardView>
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/card_player5"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    app:cardBackgroundColor="@color/transparent"
+                    app:cardElevation="0dp"
+
+                    android:layout_rowWeight="1"
+                    android:layout_columnWeight="1">
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:layout_gravity="center">
+
+                        <ImageView
+                            android:id="@+id/imagen_player5"
+                            android:layout_width="75dp"
+                            android:layout_height="75dp"
+                            android:scaleType="fitCenter"
+                            android:src="@drawable/players_image" />
+
+                        <TextView
+                            android:id="@+id/nombre_player5"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_marginTop="5dp"
+                            android:text="Jugador 5"
+                            android:textSize="16sp"
+                            android:textStyle="bold" />
+                    </LinearLayout>
+                </androidx.cardview.widget.CardView>
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/card_player6"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    app:cardBackgroundColor="@color/transparent"
+                    app:cardElevation="0dp"
+
+                    android:layout_rowWeight="1"
+                    android:layout_columnWeight="1">
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:layout_gravity="center">
+
+                        <ImageView
+                            android:id="@+id/imagen_player6"
+                            android:layout_width="75dp"
+                            android:layout_height="75dp"
+                            android:scaleType="fitCenter"
+                            android:src="@drawable/players_image" />
+
+                        <TextView
+                            android:id="@+id/nombre_player6"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_marginTop="5dp"
+                            android:text="Jugador 6"
+                            android:textSize="16sp"
+                            android:textStyle="bold" />
+                    </LinearLayout>
+                </androidx.cardview.widget.CardView>
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/card_player1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    app:cardBackgroundColor="@color/transparent"
+                    app:cardElevation="0dp"
+
+                    android:layout_rowWeight="1"
+                    android:layout_columnWeight="1">
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:layout_gravity="center">
+
+                        <ImageView
+                            android:id="@+id/imagen_player1"
+                            android:layout_width="75dp"
+                            android:layout_height="75dp"
+                            android:scaleType="fitCenter"
+                            android:src="@drawable/players_image" />
+
+                        <TextView
+                            android:id="@+id/nombre_player1"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_marginTop="5dp"
+                            android:text="Jugador 1"
+                            android:textSize="16sp"
+                            android:textStyle="bold" />
+                    </LinearLayout>
+                </androidx.cardview.widget.CardView>
 
             </GridLayout>
 
@@ -90,13 +260,15 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:layout_below="@id/pista_juego">
+            android:layout_below="@id/pista_juego"
+            android:background="@drawable/banquillo"
+            android:layout_marginTop="25dp"
+            >
 
             <LinearLayout
                 android:id="@+id/banquillo_jugadores"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:background="@color/beige_light"
                 android:orientation="horizontal"
                 android:gravity="center">
                 <!-- Jugadores añadidos se agregarán dinámicamente aquí -->
@@ -111,8 +283,8 @@
         android:id="@+id/btnAddPlayer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
+        android:layout_above="@id/btnIntercambiar"
         android:text="Agregar Jugador"
         android:layout_marginBottom="50dp"
         android:onClick="agregarJugador"
@@ -125,6 +297,18 @@
         android:textColor="@color/black"
         android:layout_alignParentBottom="true"
         android:textAlignment="center"
+        android:layout_above="@id/btnIntercambiar"
         />
+
+    <Button
+        android:id="@+id/btnIntercambiar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        android:text="Intercambiar Jugadores"
+        android:onClick="intercambiarJugadores"
+        android:background="@color/beige_medium"/>
+
 
 </RelativeLayout>
