--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-
+    <color name="transparent">#00FFFFFF</color>
     <!-- Colores básicos -->
     <color name="red">#FFFF0000</color>
     <color name="green">#FF00FF00</color>
