--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,232 +24,13 @@
             android:gravity="center_vertical">
 
             <GridLayout
+                android:id="@+id/grid_jugadoresPista"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginStart="5dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginEnd="5dp"
-                android:layout_marginBottom="5dp"
+                android:layout_centerInParent="true"
                 android:columnCount="3"
                 android:rowCount="2"
-
                 >
-
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/card_player4"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    app:cardBackgroundColor="@color/transparent"
-                    app:cardElevation="0dp"
-                    android:layout_rowWeight="1"
-                    android:layout_columnWeight="1"
-                    >
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        android:layout_gravity="center">
-
-                        <ImageView
-                            android:id="@+id/imagen_player4"
-                            android:layout_width="75dp"
-                            android:layout_height="75dp"
-                            android:scaleType="fitCenter"
-                            android:src="@drawable/players_image" />
-
-                        <TextView
-                            android:id="@+id/nombre_player4"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:layout_marginTop="5dp"
-                            android:text="Jugador 4"
-                            android:textSize="16sp"
-                            android:textStyle="bold" />
-                    </LinearLayout>
-                </androidx.cardview.widget.CardView>
-
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/card_player3"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    app:cardBackgroundColor="@color/transparent"
-                    app:cardElevation="0dp"
-
-                    android:layout_rowWeight="1"
-                    android:layout_columnWeight="1">
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        android:layout_gravity="center">
-
-                        <ImageView
-                            android:id="@+id/imagen_player3"
-                            android:layout_width="75dp"
-                            android:layout_height="75dp"
-                            android:scaleType="fitCenter"
-                            android:src="@drawable/players_image" />
-
-                        <TextView
-                            android:id="@+id/nombre_player3"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:layout_marginTop="5dp"
-                            android:text="Jugador 3"
-                            android:textSize="16sp"
-                            android:textStyle="bold" />
-                    </LinearLayout>
-                </androidx.cardview.widget.CardView>
-
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/card_player2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    app:cardBackgroundColor="@color/transparent"
-                    app:cardElevation="0dp"
-
-                    android:layout_rowWeight="1"
-                    android:layout_columnWeight="1">
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        android:layout_gravity="center">
-
-                        <ImageView
-                            android:id="@+id/imagen_player2"
-                            android:layout_width="75dp"
-                            android:layout_height="75dp"
-                            android:scaleType="fitCenter"
-                            android:src="@drawable/players_image" />
-
-                        <TextView
-                            android:id="@+id/nombre_player2"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:layout_marginTop="5dp"
-                            android:text="Jugador 2"
-                            android:textSize="16sp"
-                            android:textStyle="bold" />
-                    </LinearLayout>
-                </androidx.cardview.widget.CardView>
-
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/card_player5"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    app:cardBackgroundColor="@color/transparent"
-                    app:cardElevation="0dp"
-
-                    android:layout_rowWeight="1"
-                    android:layout_columnWeight="1">
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        android:layout_gravity="center">
-
-                        <ImageView
-                            android:id="@+id/imagen_player5"
-                            android:layout_width="75dp"
-                            android:layout_height="75dp"
-                            android:scaleType="fitCenter"
-                            android:src="@drawable/players_image" />
-
-                        <TextView
-                            android:id="@+id/nombre_player5"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:layout_marginTop="5dp"
-                            android:text="Jugador 5"
-                            android:textSize="16sp"
-                            android:textStyle="bold" />
-                    </LinearLayout>
-                </androidx.cardview.widget.CardView>
-
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/card_player6"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    app:cardBackgroundColor="@color/transparent"
-                    app:cardElevation="0dp"
-
-                    android:layout_rowWeight="1"
-                    android:layout_columnWeight="1">
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        android:layout_gravity="center">
-
-                        <ImageView
-                            android:id="@+id/imagen_player6"
-                            android:layout_width="75dp"
-                            android:layout_height="75dp"
-                            android:scaleType="fitCenter"
-                            android:src="@drawable/players_image" />
-
-                        <TextView
-                            android:id="@+id/nombre_player6"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:layout_marginTop="5dp"
-                            android:text="Jugador 6"
-                            android:textSize="16sp"
-                            android:textStyle="bold" />
-                    </LinearLayout>
-                </androidx.cardview.widget.CardView>
-
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/card_player1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    app:cardBackgroundColor="@color/transparent"
-                    app:cardElevation="0dp"
-
-                    android:layout_rowWeight="1"
-                    android:layout_columnWeight="1">
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        android:layout_gravity="center">
-
-                        <ImageView
-                            android:id="@+id/imagen_player1"
-                            android:layout_width="75dp"
-                            android:layout_height="75dp"
-                            android:scaleType="fitCenter"
-                            android:src="@drawable/players_image" />
-
-                        <TextView
-                            android:id="@+id/nombre_player1"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:layout_marginTop="5dp"
-                            android:text="Jugador 1"
-                            android:textSize="16sp"
-                            android:textStyle="bold" />
-                    </LinearLayout>
-                </androidx.cardview.widget.CardView>
 
             </GridLayout>
 
