--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".MainActivity"
     android:background="@color/azul_pista">
 
@@ -38,12 +37,14 @@
 
         <!-- Contenedor horizontal con scroll para el banquillo -->
         <HorizontalScrollView
+            android:id="@+id/scrollview"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_alignParentBottom="true"
             android:layout_below="@id/pista_juego"
             android:background="@drawable/banquillo"
             android:layout_marginTop="25dp"
+            android:layout_marginHorizontal="15dp"
             >
 
             <LinearLayout
@@ -59,6 +60,20 @@
 
     </RelativeLayout>
 
+    <!-- Marcador -->
+    <Button
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/fieldLayout"
+        android:text="34"
+        android:textSize="100dp"
+        android:textColor="@color/light_blue"
+        android:fontFamily="@font/digital_font"/>
+
+
+
+
     <!-- Botón para agregar jugador -->
     <Button
         android:id="@+id/btnAddPlayer"
@@ -67,7 +82,6 @@
         android:layout_centerHorizontal="true"
         android:layout_above="@id/btnIntercambiar"
         android:text="Agregar Jugador"
-        android:layout_marginBottom="50dp"
         android:onClick="agregarJugador"
         android:background="@color/beige_medium"
         />
