--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,17 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".MainActivity"
     android:background="@color/azul_pista">
 
     <RelativeLayout
         android:id="@+id/fieldLayout"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="500dp"
         android:background="@color/azul_pista"
-        android:layout_alignParentTop="true">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
         <!-- Contenedor para los jugadores en la pista -->
         <RelativeLayout
@@ -20,7 +23,8 @@
             android:layout_height="350dp"
             android:background="@drawable/volleyball_field"
             android:layout_marginHorizontal="20dp"
-            android:gravity="center_vertical">
+            android:gravity="center_vertical"
+            >
 
             <GridLayout
                 android:id="@+id/grid_jugadoresPista"
@@ -28,10 +32,7 @@
                 android:layout_height="match_parent"
                 android:layout_centerInParent="true"
                 android:columnCount="3"
-                android:rowCount="2"
-                >
-
-            </GridLayout>
+                android:rowCount="2" />
 
         </RelativeLayout>
 
@@ -40,12 +41,10 @@
             android:id="@+id/scrollview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_alignParentBottom="true"
             android:layout_below="@id/pista_juego"
             android:background="@drawable/banquillo"
             android:layout_marginTop="25dp"
-            android:layout_marginHorizontal="15dp"
-            >
+            android:layout_marginHorizontal="15dp">
 
             <LinearLayout
                 android:id="@+id/banquillo_jugadores"
@@ -61,17 +60,42 @@
     </RelativeLayout>
 
     <!-- Marcador -->
-    <Button
-        android:layout_width="150dp"
+    <View
+        android:id="@+id/marcador"
+        android:layout_width="0dp"
         android:layout_height="150dp"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@id/fieldLayout"
-        android:text="34"
+        android:background="@color/brown"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_margin="15dp"
+        />
+    <Button
+        android:layout_width="125dp"
+        android:layout_height="125dp"
+        android:text="01"
         android:textSize="100dp"
+        android:background="@drawable/marcador_azul"
         android:textColor="@color/light_blue"
-        android:fontFamily="@font/digital_font"/>
-
-
+        android:fontFamily="@font/digital_font"
+        app:layout_constraintTop_toTopOf="@id/marcador"
+        app:layout_constraintBottom_toBottomOf="@id/marcador"
+        app:layout_constraintStart_toStartOf="@id/marcador"
+        android:layout_margin="15dp"
+        />
+    <Button
+        android:layout_width="125dp"
+        android:layout_height="125dp"
+        android:text="10"
+        android:textSize="100dp"
+        android:background="@drawable/marcador_azul"
+        android:textColor="@color/light_blue"
+        android:fontFamily="@font/digital_font"
+        app:layout_constraintTop_toTopOf="@id/marcador"
+        app:layout_constraintBottom_toBottomOf="@id/marcador"
+        app:layout_constraintEnd_toEndOf="@id/marcador"
+        android:layout_margin="15dp"
+        />
 
 
     <!-- Botón para agregar jugador -->
@@ -79,20 +103,12 @@
         android:id="@+id/btnAddPlayer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_above="@id/btnIntercambiar"
         android:text="Agregar Jugador"
         android:onClick="agregarJugador"
         android:background="@color/beige_medium"
-        />
-    <TextView
-        android:id="@+id/numero_jugadores"
-        android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:textColor="@color/black"
-        android:layout_alignParentBottom="true"
-        android:textAlignment="center"
-        android:layout_above="@id/btnIntercambiar"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/fieldLayout"
         />
 
     <Button
@@ -102,8 +118,9 @@
         android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
         android:text="Intercambiar Jugadores"
-        android:onClick="intercambiarJugadores"
-        android:background="@color/beige_medium"/>
+        android:background="@color/beige_medium"
+        app:layout_constraintTop_toBottomOf="@id/btnAddPlayer"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
-
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
