--- a/app/src/main/res/drawable/marcador_azul.xml
+++ b/app/src/main/res/drawable/marcador_azul.xml
@@ -1,17 +1,5 @@
-<!-- res/drawable/custom_button_background.xml -->
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <!-- Estado cuando el botón está presionado -->
-    <item android:state_pressed="true">
-        <shape>
-            <solid android:color="#FF5722" /> <!-- Color de fondo cuando se presiona -->
-            <corners android:radius="8dp" /> <!-- Bordes redondeados -->
-        </shape>
-    </item>
-    <!-- Estado por defecto -->
-    <item>
-        <shape>
-            <solid android:color="#2196F3" /> <!-- Color de fondo por defecto -->
-            <corners android:radius="8dp" /> <!-- Bordes redondeados -->
-        </shape>
-    </item>
-</selector>
+<?xml version="1.0" encoding="utf-8"?>
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <corners android:radius="10dp" />
+    <solid android:color="@color/pastel_verde" /> <!-- Referencia al color verde -->
+</shape>
