--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <style name="ButtonTextStyle_blue">
-        <item name="android:textColor">@color/light_blue</item>
+        <item name="android:textColor">@color/black</item>
         <item name="android:textSize">16sp</item>
         <item name="elevation">5dp</item>
         <item name="fontFamily">@font/digital_font</item>
