--- a/app/src/main/res/drawable/botones_interface.xml
+++ b/app/src/main/res/drawable/botones_interface.xml
@@ -1,4 +1,3 @@
-<!-- res/drawable/custom_button_background.xml -->
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <!-- Estado cuando el botón está presionado -->
     <item android:state_pressed="true">
@@ -12,6 +11,8 @@
         <shape>
             <solid android:color="@color/naranja_buttons" /> <!-- Color de fondo por defecto -->
             <corners android:radius="8dp" /> <!-- Bordes redondeados -->
+            <stroke android:color="@color/naranja_buttons2"/>
+            <stroke android:width="2dp"/>
         </shape>
     </item>
 </selector>
