--- a/app/src/main/res/drawable/marcador_puntos.xml
+++ b/app/src/main/res/drawable/marcador_puntos.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <corners android:radius="10dp" />
-    <solid android:color="@color/pastel_verde" /> <!-- Referencia al color verde -->
+    <solid android:color="@color/dark_bg3" />
+    <stroke android:color="@color/dark_bg" />
+    <stroke android:width="8dp"/>
 </shape>
