--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -64,80 +64,168 @@
         android:id="@+id/marcador"
         android:layout_width="0dp"
         android:layout_height="150dp"
-        android:background="@color/dark_bg2"
+        android:background="@drawable/marcador"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_margin="15dp"
+        android:elevation="5dp"
         />
 
-    <Button
-        android:id="@+id/marcador_local"
+    <View
+        android:id="@+id/marcador_local_view"
         android:layout_width="125dp"
         android:layout_height="125dp"
-        android:text="01"
-        android:textSize="100dp"
-        android:background="@drawable/marcador_azul"
-        android:textColor="@color/light_blue"
-        android:fontFamily="@font/digital_font"
+        android:background="@drawable/marcador_puntos"
         app:layout_constraintTop_toTopOf="@id/marcador"
         app:layout_constraintBottom_toBottomOf="@id/marcador"
         app:layout_constraintStart_toStartOf="@id/marcador"
         android:layout_margin="15dp"
+        android:elevation="5dp"
         />
 
-    <Button
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+    <TextView
+        android:id="@+id/marcador_local_nums"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="00"
+        android:textSize="100dp"
+        android:textColor="@color/light_blue"
+        android:fontFamily="@font/digital_font"
+        app:layout_constraintTop_toTopOf="@id/marcador_local_view"
+        app:layout_constraintBottom_toBottomOf="@id/marcador_local_view"
+        app:layout_constraintStart_toStartOf="@id/marcador_local_view"
+        app:layout_constraintEnd_toEndOf="@id/marcador_local_view"
+        android:elevation="5dp"
+        />
+
+    <View
+        android:id="@+id/marcador_sets_local_view"
+        android:layout_width="45dp"
+        android:layout_height="60dp"
         android:text="10"
         android:textSize="100dp"
-        android:background="@drawable/marcador_azul"
+        android:background="@drawable/marcador_sets"
         android:textColor="@color/light_blue"
         android:fontFamily="@font/digital_font"
         app:layout_constraintTop_toTopOf="@id/marcador"
         app:layout_constraintBottom_toBottomOf="@id/marcador"
-        app:layout_constraintStart_toEndOf="@id/marcador_local"
+        app:layout_constraintStart_toEndOf="@id/marcador_local_view"
+        android:layout_marginStart="3dp"
+        android:elevation="5dp"
         />
 
-    <Button
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:text="10"
-        android:textSize="100dp"
-        android:background="@drawable/marcador_azul"
+    <TextView
+        android:id="@+id/marcador_local_sets_nums"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="0"
+        android:textSize="40dp"
         android:textColor="@color/light_blue"
         android:fontFamily="@font/digital_font"
         app:layout_constraintTop_toTopOf="@id/marcador"
         app:layout_constraintBottom_toBottomOf="@id/marcador"
-        app:layout_constraintEnd_toStartOf="@id/visitante"
+        app:layout_constraintStart_toStartOf="@id/marcador_sets_local_view"
+        app:layout_constraintEnd_toEndOf="@id/marcador_sets_local_view"
+        android:elevation="5dp"
         />
 
-    <Button
-        android:id="@+id/visitante"
+    <View
+        android:id="@+id/marcador_sets_visitante_view"
+        android:layout_width="45dp"
+        android:layout_height="60dp"
+        android:text="10"
+        android:textSize="100dp"
+        android:background="@drawable/marcador_sets"
+        android:textColor="@color/light_blue"
+        android:fontFamily="@font/digital_font"
+        app:layout_constraintTop_toTopOf="@id/marcador"
+        app:layout_constraintBottom_toBottomOf="@id/marcador"
+        app:layout_constraintEnd_toStartOf="@id/marcador_visitante_view"
+        android:layout_marginEnd="3dp"
+        android:elevation="5dp"
+        />
+
+    <TextView
+        android:id="@+id/marcador_visitante_sets_nums"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="1"
+        android:textSize="40dp"
+        android:textColor="@color/light_blue"
+        android:fontFamily="@font/digital_font"
+        app:layout_constraintTop_toTopOf="@id/marcador"
+        app:layout_constraintBottom_toBottomOf="@id/marcador"
+        app:layout_constraintStart_toStartOf="@id/marcador_sets_visitante_view"
+        app:layout_constraintEnd_toEndOf="@id/marcador_sets_visitante_view"
+        android:elevation="5dp"
+        />
+
+    <View
+        android:id="@+id/marcador_visitante_view"
         android:layout_width="125dp"
         android:layout_height="125dp"
-        android:text="10"
-        android:textSize="100dp"
-        android:background="@drawable/marcador_azul"
-        android:textColor="@color/light_blue"
-        android:fontFamily="@font/digital_font"
+        android:background="@drawable/marcador_puntos"
         app:layout_constraintTop_toTopOf="@id/marcador"
         app:layout_constraintBottom_toBottomOf="@id/marcador"
         app:layout_constraintEnd_toEndOf="@id/marcador"
         android:layout_margin="15dp"
+        android:elevation="5dp"
+        />
+
+    <TextView
+        android:id="@+id/marcador_visitante_nums"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="00"
+        android:textSize="100dp"
+        android:textColor="@color/light_blue"
+        android:fontFamily="@font/digital_font"
+        app:layout_constraintTop_toTopOf="@id/marcador_visitante_view"
+        app:layout_constraintBottom_toBottomOf="@id/marcador_visitante_view"
+        app:layout_constraintStart_toStartOf="@id/marcador_visitante_view"
+        app:layout_constraintEnd_toEndOf="@id/marcador_visitante_view"
+        android:elevation="5dp"
         />
 
 
-    <!-- Botón para agregar jugador -->
-    <Button
-        android:id="@+id/btnAddPlayer"
-        android:layout_width="wrap_content"
+    <!-- Botones de acción -->
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:onClick="agregarJugador"
-        android:background="@drawable/botones_interface"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/fieldLayout"
+        android:gravity="center"
+        android:layout_margin="15dp"
+        android:elevation="5dp">
+
+    <View
+        android:id="@+id/btnAddPlayer"
+        android:layout_width="65dp"
+        android:layout_height="65dp"
+        android:onClick="agregarJugador"
+        android:background="@drawable/botones_interface"
+        android:layout_marginHorizontal="5dp"
         />
+
+    <View
+        android:id="@+id/btnDltPlayer"
+        android:layout_width="65dp"
+        android:layout_height="65dp"
+        android:onClick="agregarJugador"
+        android:background="@drawable/botones_interface"
+        android:layout_marginHorizontal="5dp"
+        />
+
+    <View
+        android:id="@+id/btnRtrn"
+        android:layout_width="65dp"
+        android:layout_height="65dp"
+        android:onClick="agregarJugador"
+        android:background="@drawable/botones_interface"
+        android:layout_marginHorizontal="5dp"
+        />
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
